<resources>
    <string name="app_name">QuizZ</string>
    <string name="quizz_app">QuizZ app!</string>
    <string name="welcome">Welcome!</string>
    <string name="please_enter_your_name">Please enter your name.</string>
    <string name="start">Start</string>
    <string name="name">Name</string>
    <string name="image">image</string>
    <string name="submit">SUBMIT</string>
    <string name="result">Result</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="finish">FINISH</string>
</resources>